discussion/kv_engine/185468/185468_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: DCP test refactoring

Add configuration classes and configuration helpers for DCP producer
and stream creation.

Update the existing test harness functions to use the new configuration
paths so the existing tests work without changes.

Change-Id: Ie3c4c5ed2b64dd12f3c74ed3f2e5e56316dbf184

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-25 15:25:49.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-25 15:26:03.000000000
Message: 
Patch Set 5: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/334207/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-25 16:06:17.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/925/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_producer_config.cc:96:9: error: use of undeclared identifier "EXPECT_EQ" [clang-diagnostic-error]
        EXPECT_EQ(cb::engine_errc::success,
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_producer_config.cc:98:9: error: use of undeclared identifier "EXPECT_EQ" [clang-diagnostic-error]
        EXPECT_EQ(cb::engine_errc::success,
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_producer_config.cc:103:9: error: use of undeclared identifier "EXPECT_EQ" [clang-diagnostic-error]
        EXPECT_EQ(cb::engine_errc::success,
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_producer_config.cc:108:9: error: use of undeclared identifier "EXPECT_EQ" [clang-diagnostic-error]
        EXPECT_EQ(cb::engine_errc::success,
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_producer_config.h:38:10: error: no template named "shared_ptr" in namespace "std" [clang-diagnostic-error]
    std::shared_ptr<MockDcpProducer> createDcpProducer(
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_producer_config.h:55:17: error: implicit instantiation of undefined template "std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >" [clang-diagnostic-error]
    std::string name;
                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stringfwd.h:74:11: note: template is declared here
    class basic_string;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_stream_request_config.cc:78:5: error: use of undeclared identifier "EXPECT_EQ" [clang-diagnostic-error]
    EXPECT_EQ(getExpectedError(),
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/925/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_producer_config.cc:96:9:
error: use of undeclared identifier "EXPECT_EQ" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/925/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1223/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1223/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/917/ : FAILURE

Compile error at [2023-01-25T15:32:37.987Z] ../kv_engine/engines/ep/tests/module_tests/dcp_producer_config.h:38:10:
error: no template named "shared_ptr" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/917/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1110/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/895/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22371/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/934/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/945/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/937/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/946/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/938/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
